kubernetes/examples/argo-events/ingress-webhook.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: driveby-webhook
  namespace: driveby
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: driveby-webhook.example.com
      http:
        paths:
          - path: /github
            pathType: Prefix
            backend:
              service:
                name: driveby-github-eventsource-svc
                port:
                  number: 12000
